<resources>
    <string name="app_name">WeatherForecast-v1.0</string>
    <string name="weatherforecast">WeatherForecast</string>
    <string name="weatherforecast_v1_0">WeatherForecast v1.0</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="empty_string"/>
    <string name="dan_subota">DAN : Subota</string>
    <string name="temperatura">Temperatura</string>
    <string name="izlazak_i_zalazak_sunca">Izlazak i zalazak sunca</string>
    <string name="vetar">Vetar</string>
    <string name="jedinica">Jedinica:</string>
    <string name="grad">GRAD :</string>
    <string name="vla_nost_vazduha">Vlažnost vazduha</string>
    <string name="pritisak_1000">Pritisak: 1000</string>
    <string name="temperatura_11">Temperatura: 11</string>
    <string name="vla_nost_vazduha_44">vlažnost_vazduha:44</string>
    <string name="prazan_string" />
    <string name="Град">Град:</string>
    <string name="Дан">Дан :</string>
    <string name="Температура">Temperatura</string>
    <string name="Сунце">Izlazak i zalazak sunca</string>
    <string name="Ветар">Vetarр</string>
    <string name="_11">Temperatura: 11</string>
    <string name="_1000">Pritisak: 1000</string>
    <string name="_44">Vlažnost vazduha: 44</string>
    <string name="Јединица">Jedinica:</string>
    <string name="_6_47_n_17_45">Izlazak sunca: 6:47\n Zalazak sunca: 17:45</string>
    <string name="_4_1_n_n">Brzina vetra: 4.1\n Pravac: N</string>
    <string name="lokacija">Локација за приказ временске прогнозе:</string>
    <string name="empty" />
    <string name="prikazi">ПРИКАЖИ</string>
    <string name="Sabac">Šabac</string>
    <string name="NoviSad">Novi Sad</string>
    <string name="Beograd">Beograd</string>

</resources>
