<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:orientation="vertical"
    android:background="@drawable/drawable_green"
    android:weightSum="4">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
       >

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textSize="25dp"
            android:inputType="textPersonName"
            android:text="Grad:"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:text="Dan:"
            android:textColor="@color/black"
            android:textSize="25dp" />
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/statistika"
            android:layout_gravity="center"
            android:text="STATISTIKA"
            android:background="@drawable/drawable_green"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"

        >


        <Button
            android:id="@+id/temperatura"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="13dp"
            android:text="@string/Температура"
            android:textColor="@color/white"
            android:background="@drawable/drawable_rounded_green"/>

        <Button
            android:id="@+id/sunce"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Сунце"
            android:textColor="@color/white"
            android:background="@drawable/drawable_rounded_green"
            />

        <Button
            android:id="@+id/vetar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Ветар"
            android:textColor="@color/white"
           android:background="@drawable/drawable_rounded_green">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:id="@+id/Layout1"
        android:orientation="horizontal"
        android:weightSum="20"
        >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/Layout2"
         android:orientation="horizontal"
         android:weightSum="10"

         android:layout_weight="10"
         >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical">


         <ImageView
             android:id="@+id/slika"
             android:layout_width="@dimen/sunce_sirina"
             android:layout_height="@dimen/sunce_duzina"
             android:layout_gravity="left"

             android:layout_weight="0"

             android:src="@drawable/sun_icon"
             />

             <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.75"
             android:textSize="18dp"
             android:textStyle="bold"
             android:gravity="bottom"
                 android:textAlignment="center"
             android:textColor="@color/black"
             android:text="@string/_11" />

             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="0.75"
                 android:textSize="18dp"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:text="City not found!" />
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="0.75"
                 android:textSize="18dp"
                 android:gravity="top"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:text="" />

         </LinearLayout>


         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="5"

             android:gravity="right"
             android:text="@string/unit"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="18dp"
             android:textStyle="bold" />

         <Spinner
             android:id="@+id/spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="5"
             android:gravity="top"
             android:background="@drawable/drawable_rounded_green"
             android:spinnerMode="dropdown" />

     </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/Layout3"
            >
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:textAlignment="center"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/black"

                android:layout_weight="1"
                android:text="@string/_6_47_n_17_45"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Layout4"

            >
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:textAlignment="center"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/black"

                android:layout_weight="1"
                android:text="@string/_4_1_n_n" />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>